# Trabalhos-Sistemas-Distribuidos

./: .gitignore  README.md
Examples Comunicacao/MulticastPeer/: MulticastPeer.java
Examples Comunicacao/UDPClient/: UDPClient.java
Exemplo pyro/: server.py
MulticastPeer Python/: multicast.py
trabalho 1/: trabalho1 - Nicolas e Alefe.py  trabalho1.py
trabalho 2/: client.py  enums.py  fin_api.py  order.py  run.sh  run_client.py  run_homebroker.py  run_nameserver.sh  run_stock_market.py  server.py
trabalho 2/app/: enums.py  order.py
trabalho 2/app/client/: client.py  gui.py
trabalho 2/homebroker/: homebroker.py
trabalho 2/stock_market/: gui.py  initial_state.json  real_stock_market.py  stock_market.db  stock_market.py
trabalho 3/: README.md  run_client.py  run_client.sh  run_stock_market.py
trabalho 3/app/: enums.py  order.py
trabalho 3/app/client/: CMakeLists.txt  Client.cpp  Client.h  ClientLoginWindow.cpp  ClientLoginWindow.h  MainWindow.cpp  MainWindow.h  Order.cpp  Order.h  client.cpp  enums.h  gui.h  gui_client.h  main_window.ui  run.cpp  sse.cpp  sse.h  teste.h  teste.ui
trabalho 3/test/: test_post.sh  test_sse.html  test_sse_client.html  test_sse_libcurl.cpp
trabalho 4/: run_client.sh  run_homebroker.sh  run_stock_market.py
trabalho 4/app/: consts.py  enums.py  order.py
trabalho 4/app/client/: CMakeLists.txt  Client.cpp  ClientLoginWindow.h  MainWindow.cpp  Order.cpp  enums.h  login.ui  main_window.ui  run.cpp
trabalho 4/test/: server_python.py  test_sse_client.html  test_sse_libcurl.cpp  test_sse_server.py
(+22 files in other folders)
